# sdkit

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_deploy_workflow.yml  gha_workflow.yml  publish_to_pypi.yml  py-lint.yml
examples/: 001-generate-model_file_on_disk.py  002-generate-download_known_model.py  002b-generate-download_multiple_known_models.py  003-generate-custom_model.py  004-generate-custom_vae.py  005-generate-custom_hypernetwork.py  006-generate-change_models.py  007-generate-and-filter.py  008-generate-custom_lora.py  009-generate-controlnet.py  010-generate-custom_embedding.py  050-generate-experimental_parser.py  100-filter-fix_faces.py  101-filter-fix_faces_download_known_model.py  102-filter-multiple.py  102-filter-upscale.py  103-filter-multiple.py  104-filter-nsfw_checker.py  105-filter-fix_faces_codeformer.py  200-train-merge_models.py  300-device-low-vram.py  301-device-run_on_different_gpu.py  302-device-run_on_cpu.py  304-device-run_on_multiple_gpus.py  305-device-full_precision.py  400-security-scan_model.py  900-experimental-tokenizer_decode.py  901-experimental-prompt_to_img.py
models_db/: gfpgan.json  print_quick_hashes.py  stable_diffusion.json
models_db/configs/: v2.1-inference-v.yaml
scripts/: compare_benchmarks.py  download_all_models.py  print_quick_hashes.py  run_everything.py  txt2img_original.py
scripts/new_parser/: prompt_to_img.py  tokenizer_decode.py
sdkit/: __init__.py  __main__.py
sdkit/filter/: __init__.py  apply_filters.py  codeformer.py  gfpgan.py  latent_upscaler.py  nsfw_checker.py  realesrgan.py
sdkit/filter/codeformer/: __init__.py  face_restoration_helper.py  misc.py
sdkit/generate/: __init__.py  image_generator.py  prompt_parser.py  tokenizer_conditionings.py
sdkit/generate/experimental_parser/: prompt_parser.py  tokenizer_conditionings.py
sdkit/generate/sampler/: __init__.py  default_samplers.py  (+4 more)
sdkit/models/: __init__.py  model_downloader.py  models_db.py  scan_models.py
sdkit/train/: __init__.py  merge_models.py
sdkit/utils/: __init__.py  convert_model_utils.py  device_utils.py  file_utils.py  hash_utils.py  http_utils.py  image_utils.py  latent_utils.py  memory_utils.py  misc_utils.py
tests/: README.md  common.py  conftest.py  test_codeformer.py  test_controlnet.py  test_directml_tensorrt.py  test_embeddings.py  test_gfpgan_realesrgan.py  test_lora.py  test_model_merge.py  test_stable_diffusion.py  test_stable_diffusion_detailed.py  test_stable_diffusion_quick.py  test_tiling.py  test_vram_frees_after_image_generation.py  test_vram_memory_leaks.py  vram_frees_after_image_generation.py
tests/samplers/: test_samplers_img2img.py  test_samplers_txt2img.py
tests/unit/: conftest.py
(+52 files in other folders)
